# devops-project

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  app.py  docker-compose.prod.yml  docker-compose.yml  patch_dashboard_p2.py  patch_routes.py  prometheus.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  run.py  test_error.py  test_error2.py  update_ui.py  update_ui_premium.py  wsgi.py
.github/workflows/: ci-cd.yml  codeql.yml  main.yml
app/: __init__.py  api.py  models.py  routes.py
app/uploads/: 1_1779004883_DS_PROJECTT.txt  3_1779008348_Devops.txt
docs/screenshots/: README.md
instance/: blood_donation.db
nginx/: nginx.conf
scripts/: run.ps1  run.sh
static/: app.js  style.css  swagger.json
static/css/: style.css
templates/: admin_dashboard.html  base.html  dashboard.html  donors.html  index.html  login.html  register.html  request.html  signup.html  urgent_requests.html
tests/: conftest.py  test_app.py  test_config.py
website/: __init__.py  app_factory.py  config.py
